@@ -1,9 +1,14 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: moved argument
+  check to the beginning of the doebuild() function to prevent "ebuild
+  foo.ebuild fart" from causing the md5sums to be checked before recognizing
+  that "fart" is not a valid command.  Closes bug #1823.
+  
   15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: 'USE="-foo"
   emerge bar' should now work correctly and consistently.  Fixes to the config
-  class.
+  class.  Closes bug #1455.
   
   15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: applied
   jnelson's patch to properly kill all children when interrupted with ^C
